UPDATE : resume.HTML, CSS

--- a/css/main.css
+++ b/css/main.css
@@ -9,8 +9,7 @@ body, html {height:100%; box-sizing: border-box; margin:0; list-style: none; fon
 
 html {scroll-behavior: smooth;}
 
-header{display: grid; grid-auto-flow: column; grid-template-columns:1fr ; width:100%; text-align: left; box-shadow: 10px 10px 10px #e6e6e6; position: fixed; background-color:#fff; top:0; left:0; right:0; font-family: 'Lobster', cursive;}
-header > h1{font-size:40px; color:#28cdc8; padding:5px 0 20px 30px; margin:0; display: inline-block;}
+header{display: grid; grid-auto-flow: column; grid-template-columns:1fr ; width:100%; text-align: left; box-shadow: 10px 10px 10px #e6e6e6; position: fixed; background-color:#fff; top:0; left:0; right:0;}
 
 .nav{display: inline-block;}
 .nav > li {list-style: none; display: inline-block; padding:10px 30px 0 0;}
