--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ header > h1 {font-size:2rem; font-weight: 400; line-height: 0;}
 .fas {color:#28c8f8; font-size:30px;}
 
 .container{width:100%; max-width: 50rem; margin:auto;}
-h1 {font-size:4rem; line-height: 1.1;}
+h1 {font-size:4rem; line-height: 1.1; padding-top:5rem;}
 .paragraph{font-size:2rem; line-height: 1.4; font-weight: 300; padding-bottom: 2rem; border-bottom: 1px solid #aaaaaa;}
 section {padding: 0 2rem;}
 
