UPDATE : 이미지 파일명 변경, HTML 수정, CSS 수정

--- a/css/main.css
+++ b/css/main.css
@@ -12,9 +12,11 @@ h1 {font-size:4rem; line-height: 1.1; padding-top:5rem;}
 .paragraph{font-size:2rem; line-height: 1.4; font-weight: 300; padding-bottom: 2rem; border-bottom: 1px solid #eee;}
 section {padding: 0 2rem;}
 
-.flex_container{display: flex; padding-bottom: 4rem; border-bottom: 1px solid #eee;}
-.flex_container > article {font-size:1.5rem; width:33.3%;}
-article > img {max-width: 70px;}
+.flex_container{display: flex; padding-bottom: 4rem;}
+.border {border-bottom: 1px solid #eee;}
+.skill_article {font-size:0.8rem; width:33.3%; padding:0 1rem;}
+.skill_article > img {max-width:70px;}
+
 
 h2 {font-size:3rem; margin:5rem 0 2rem 0; line-height: 0.5;}
 .fa-circle {font-size:0.7rem; }
