--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,9 @@
 @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css);
 
-body, html {word-break: keep-all; overflow-x: hidden; height:100%; box-sizing: border-box; margin:0; padding-bottom:2rem; list-style: none; font-family:'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif'; }
+body, html {word-break: keep-all; overflow-x: hidden; height:100%; box-sizing: border-box; margin:0; padding-bottom:2rem; font-family:'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif'; }
 body::before {position: fixed; z-index: 1; top: 0; left:0; right:0; display: block; content: ""; width: 100%; height: 10px; background: linear-gradient(90deg,#be6fff,#28c8f8);}
 header{text-align: right; padding:2rem 2rem;}
 header > h1 {font-size:2rem; font-weight: 400; line-height: 0;}
-.fab {color:#28c8f8; font-size:30px; padding-right:5px;}
-.fas {color:#28c8f8; font-size:30px;}
 
 .container{width:100%; max-width: 50rem; margin:auto;}
 h1 {font-size:4rem; line-height: 1.1; padding-top:5rem;}
@@ -19,12 +17,11 @@ section {padding: 0 2rem;}
 .skill_img_div > img {max-width:70px;}
 
 h2 {font-size:3rem; margin:5rem 0 2rem 0; line-height: 0.5;}
-.fa-circle {font-size:0.3rem; padding-right:1rem;}
 .experience_section {margin:3rem 0; padding-bottom: 3rem; border-bottom: 1px solid #eee;}
 .project_section > p {padding-bottom: 3rem;}
 .project_article {margin:7rem 0 7rem 0;}
 .project_article > ul {padding-bottom: 2rem;}
-.project_article > ul > li { list-style: none; line-height: 2.5;}
+.project_article > ul > li {line-height: 2.5;}
 
 .contact_article {margin-top:10rem;}
 .contact_article > p > span { font-size:1.5rem; font-weight: 800;}
