--- a/css/main.css
+++ b/css/main.css
@@ -4,33 +4,20 @@ body, html {word-break: keep-all; overflow-x: hidden; height:100%; box-sizing: b
 body::before {position: fixed; z-index: 1; top: 0; left:0; right:0; display: block; content: ""; width: 100%; height: 10px; background: linear-gradient(90deg,#be6fff,#28c8f8);}
 header{text-align: right; padding:2rem 2rem;}
 header > h1 {font-size:2rem; font-weight: 400; line-height: 0;}
-
-.container{width:100%; max-width: 50rem; margin:auto;}
 h1 {font-size:4rem; line-height: 1.1; padding-top:5rem;}
-.paragraph{font-size:1.7rem; line-height: 1.7; font-weight: 300; padding-bottom: 2rem; border-bottom: 1px solid #eee;}
-section {padding: 0 2rem;}
-
-.flex_container{display: flex; padding-bottom: 4rem;}
-.border {border-bottom: 1px solid #eee;}
-.skill_article {font-size:0.8rem; width:33.3%; padding:0 1rem;}
-.skill_img_div {height:150px;}
-.skill_img_div > img {max-width:70px;}
-.skill_article > ul {padding-inline-start:0.5rem;}
-.skill_article > ul > li {padding-block-end:1rem;}
-.skill_string_div > ul > li {padding-block-end:1rem;}
-
 h2 {font-size:3rem; margin:5rem 0 2rem 0; line-height: 0.5;}
-.experience_section {margin:3rem 0; padding-bottom: 3rem; border-bottom: 1px solid #eee;}
-.experience_section > ul > li {line-height: 2.5;}
-.project_section > p {padding-bottom: 3rem;}
-.project_article {margin:7rem 0 7rem 0;}
-.project_article > ul {padding-bottom: 2rem;}
-.project_article > ul > li {line-height: 2.5;}
+h3 {font-size:2rem;}
+h4 {font-size:1.3rem;}
+section {padding: 0 2rem;}
+article {width:100%; padding:1.5rem 4rem; margin:2rem 0 0 0;}
+ul {padding-inline-start:30px; margin:1.5rem 0 1rem; font-size:1.1rem;}
+li::marker {font-size:0.5rem; color:#2871f8;}
+.container{width:100%; max-width: 50rem; margin:auto;}
+.paragraph{font-size:2rem; line-height: 1.5; font-weight: 300; padding-bottom: 2rem; border-bottom: 1px solid #eee;}
 
-.contact_article {margin-top:10rem;}
-.contact_article > p > span { font-size:1.5rem; font-weight: 800;}
+.skill_img_div > img {max-width:70px;}
+
+.contact_article {margin-top:5rem;}
 .contact_flex {display: flex;}
 .contact_flex > a > img {width:60px;}
-h3 {font-size:2.5rem; line-height: 0;}
-h4 {font-size:1.6rem;}
-h5 {font-size:1.5rem; margin-block-end:0.5em;}
+
