--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,27 @@
 @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css);
+::selection {background-color:#be6fff;}
 
 body, html {word-break: keep-all; overflow-x: hidden; height:100%; box-sizing: border-box; margin:0; padding-bottom:2rem; font-family:'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif'; }
 body::before {position: fixed; z-index: 1; top: 0; left:0; right:0; display: block; content: ""; width: 100%; height: 10px; background: linear-gradient(90deg,#be6fff,#28c8f8);}
-header{text-align: right; padding:2rem 2rem;}
-header > h1 {font-size:2rem; font-weight: 400; line-height: 0;}
+header {text-align: right; padding:2rem 2rem;}
+header h1 {font-size:2rem; font-weight: 400; line-height: 0;}
 h1 {font-size:4rem; line-height: 1.1; padding-top:5rem;}
-h2 {font-size:3rem; margin:5rem 0 2rem 0; line-height: 0.5;}
+h2 {font-size:3rem; line-height: 0.5; margin:4rem 0 2rem;}
+h2::after {content: "."; color:#2871f8;}
 h3 {font-size:2rem;}
 h4 {font-size:1.3rem;}
 section {padding: 0 2rem;}
-article {width:100%; padding:1.5rem 4rem; margin:2rem 0 0 0;}
-ul {padding-inline-start:30px; margin:1.5rem 0 1rem; font-size:1.1rem;}
+article {width:100%; padding:3rem 0; border-bottom: 1px solid #eee;}
+ul {padding-inline-start:15px; margin:1.5rem 0 1rem; font-size:1.1rem; font-weight: 300;}
 li::marker {font-size:0.5rem; color:#2871f8;}
-.container{width:100%; max-width: 50rem; margin:auto;}
-.paragraph{font-size:2rem; line-height: 1.5; font-weight: 300; padding-bottom: 2rem; border-bottom: 1px solid #eee;}
+li span {background-color: #2871f8; color:#fff;}
+.container {width:100%; max-width: 50rem; margin:auto;}
+.paragraph {font-size:2rem; line-height: 1.5; font-weight: 300; padding-bottom: 2rem;}
 
-.skill_img_div > img {max-width:70px;}
+.videowrapper {position:relative; padding-bottom:56.25%; padding-top:25px; height: 0;}
+.videowrapper iframe {position:absolute; top:0; left:0; width:100%; height: 100%;}
+
+.skill_img_div img {max-width:70px;}
 
 .contact_article {margin-top:5rem;}
 .contact_flex {display: flex;}
