--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@ li span {box-shadow: 0 -6px rgba(92, 136, 231, 0.3) inset;}
 .videowrapper {position:relative; padding-bottom:56.25%; padding-top:25px; height: 0;}
 .videowrapper iframe {position:absolute; top:0; left:0; width:100%; height: 100%;}
 
-.skill_img_div img {max-width:70px;}
+.skill_img_div img {max-width:70px; padding-right:1rem;}
 
 .contact_article {margin-top:5rem;}
 .contact_flex {display: flex;}
